# extension-meilisearch

./: .gitignore  importmds.py  justfile  pyproject.toml
resources/md-samples/: file1.md  file2.md
src/: main.py  slackdb.py  toolbox.py
